Add default @PreAuthorize for api methods